<resources>
    <string name="app_name">API-Application_v2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Clear History</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_slideshow">Favorites</string>
    <string name="menu_tools">Blocked</string>
    <string name="menu_share">Settings</string>
    <string name="menu_send">About</string>

    <string name="setting">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
